--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -3,3 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=password
 
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+
+secret=secret
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
